<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fernando.phonedialer.PhoneDialerActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginLeft="8dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">


        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone|none"
            android:text="" />


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="3"
            android:rowCount="5">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0"
                android:text="@string/button1_text" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0"
                android:text="@string/button2_text" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0"
                android:text="@string/button3_text" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="1"
                android:text="@string/button4_text" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_row="1"
                android:text="@string/button5_text" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="1"
                android:text="@string/button6_text" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="2"
                android:text="@string/button7_text" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_row="2"
                android:text="@string/button8_text" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="2"
                android:text="@string/button9_text" />

            <Button
                android:id="@+id/buttonStar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="3"
                android:text="@string/buttonStar_text" />

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_row="3"
                android:text="@string/button0_text" />

            <Button
                android:id="@+id/buttonHash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="3"
                android:text="@string/buttonHash_text" />

            <ImageButton
                android:id="@+id/imageButtonCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="4"
                app:srcCompat="@android:drawable/sym_action_call" />

            <ImageButton
                android:id="@+id/imageButtonDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="4"
                app:srcCompat="@android:drawable/ic_input_delete" />
        </GridLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
